# szu-information-retrieval

./: .gitignore  Cargo.toml  README.md
crawler/: index.ts  package.json  pnpm-lock.yaml  tsconfig.json
public/: index.html  szu.css
public/scripts/: app.js
src/: almost_eq.rs  dataset.rs  error.rs  main.rs  search.rs
src/core/: count_vectorizer.rs  cs_helper.rs  inverted_index.rs  mod.rs  tfidf_vectorizer.rs  vocabulary.rs
