[package]
name = "szu-ir"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jieba-rs = "0.6.7"
ndarray = "0.15.6"
tokio = { version = "1.0", features = ["full"] }
axum = "0.6.18"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.4.0", features = ["fs", "trace"] }
futures = "0.3.28"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
rust-stemmers = "1.2.0"
sprs = "0.11.1"
